# ipadprocad

./: .gitignore  .gitmodules  HANDOFF.md  README.md
.github/workflows/: m1-core-build.yml  occt-build.yml  slvs-build.yml
backend/occt/: .gitignore  CMakeLists.txt  VENDOR.md
backend/occt/shim/: occt_capi.cpp  occt_capi.h
backend/occt/tests/: smoke_occt.c
backend/qcad-core/: CMakeInclude.txt  CMakeLists.txt  VENDOR.md
backend/qcad-core/bindings/dart/: qcad_ffi.dart
backend/qcad-core/bindings/dart/example/: qcad_smoke.dart
backend/qcad-core/src/capi/: CMakeLists.txt  qcad_capi.cpp  qcad_capi.h
backend/qcad-core/src/capi/tests/: smoke.c
backend/qcad-core/src/core/: CMakeLists.txt  RAction.cpp  RBlock.cpp  RGuiAction.cpp  RMainWindow.cpp  RMetaTypes.h  RPropertyEditor.cpp  RSPlatform.cpp  RSettings.cpp  RWheelEvent.cpp
backend/qcad-core/src/core/bridges/: CMakeLists.txt
backend/qcad-core/src/core/math/: RSpline.cpp
backend/qcad-core/src/entity/: CMakeLists.txt
backend/qcad-core/src/io/dxf/: CMakeLists.txt
backend/qcad-core/src/operations/: CMakeLists.txt
backend/qcad-core/src/snap/: CMakeLists.txt
backend/qcad-core/src/spatialindex/: CMakeLists.txt
backend/slvs/: CMakeLists.txt  VENDOR.md
backend/slvs/shim/: slvs_shim.cpp  slvs_shim.h
backend/slvs/tests/: shim_test.c  slvs_smoke.c
ci/: parse_link_txt.py
frontend/: .flutter-plugins-dependencies  .gitignore  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_graph.json
frontend/.dart_tool/hooks_runner/objective_c/6b4ebf10e7/: dependencies.dependencies_hash_file.json  hook.dependencies_hash_file.json  hook.dill.d  input.json  output.json  stdout.txt
frontend/lib/: app_state.dart  constraints.dart  diag.dart  gear.dart  hud.dart  inserts.dart  log.dart  main.dart  modify.dart  params.dart  part_model.dart  part_render.dart  reality_scene.dart  snap.dart  solver.dart  spline.dart  svg_icons.dart  theme.dart  tools.dart  touch.dart
frontend/lib/ffi/: occt_engine.dart  qcad_engine.dart  slvs_ffi.dart
frontend/lib/widgets/: bottom_tabbar.dart  extrude_dialog.dart  gear_dialog.dart  home_view.dart  model_browser.dart  native_prompts.dart  parameters_dialog.dart  pattern_dialog.dart  ribbon.dart  text_editor_window.dart  viewport.dart  viewport3d.dart
frontend/test/: construction_geometry_test.dart  construction_rank_test.dart  device_replay_test.dart  dimension_expressions_test.dart  dimension_kinds_test.dart  dimension_picks_test.dart  drag_stability_test.dart  flow_probe_test.dart  home_gallery_test.dart  m25_test.dart  m26_test.dart  m27_test.dart  m28_test.dart  m29_test.dart  m30_test.dart  m31_test.dart  m32_test.dart  m33_test.dart  m34_test.dart  m35_test.dart  m36_test.dart  m42_visibility_test.dart  m43_parameters_test.dart  m44_inserts_test.dart  m45_inserts_fixes_test.dart  m46_shortcut_suppression_test.dart  m47_body_drag_test.dart  m49_split_test.dart  m50_ribbon_slimming_test.dart  m53_end_of_sketch_test.dart  m53_hud_arrows_test.dart  m53_touch_test.dart  m55_occt_ffi_test.dart  m56_part_test.dart  m57_new_menu_test.dart  m57_part_preview_test.dart  m58_smooth_solids_test.dart  m59_shaded_edges_test.dart  m60_boolean_test.dart  m62_boolean_test.dart  (+11 more)
